
    create table "public"."asset" (
        "id" bigint generated by default as identity,
        "amount" numeric(32,10),
        "provider" bigint,
        "ticker" bigint,
        primary key ("id")
    );

    create table "public"."balance" (
        "id" bigint generated by default as identity,
        "available" numeric(32,10),
        primary key ("id")
    );

    create table "public"."candle" (
        "id" bigint generated by default as identity,
        "close" numeric(32,10),
        "max" numeric(32,10),
        "min" numeric(32,10),
        "occurred" bigint,
        "open" numeric(32,10),
        "volume" numeric(32,10),
        "interval" bigint,
        "ticker" bigint,
        primary key ("id")
    );

    create table "public"."indicator" (
        "id" bigint generated by default as identity,
        "code" varchar(255),
        "name" varchar(255),
        primary key ("id")
    );

    create table "public"."indicator_data" (
        "id" bigint generated by default as identity,
        "data" numeric(32,10) array,
        "end" bigint,
        "start" bigint,
        "indicator" bigint,
        "ticker" bigint,
        primary key ("id")
    );

    create table "public"."interval" (
        "id" bigint generated by default as identity,
        "code" varchar(255),
        primary key ("id")
    );

    create table "public"."notification" (
        "id" bigint generated by default as identity,
        "content" varchar(255),
        "event" varchar(255),
        "type" bigint,
        "user" bigint,
        primary key ("id")
    );

    create table "public"."notification_type" (
        "id" bigint generated by default as identity,
        "code" varchar(255),
        primary key ("id")
    );

    create table "public"."provider" (
        "id" bigint generated by default as identity,
        "attrs" varchar(255),
        "buy_spread" numeric(32,10),
        "code" varchar(255),
        "enabled" boolean,
        "fetch_data" boolean,
        "fixed_commission" numeric(32,10),
        "sell_spread" numeric(32,10),
        primary key ("id")
    );

    create table "public"."ticker" (
        "id" bigint generated by default as identity,
        "autotrade" boolean,
        "enabled" boolean,
        "keep_minimum" numeric(32,10),
        "name" varchar(255),
        "ticker" varchar(255),
        primary key ("id")
    );

    create table "public"."token" (
        "id" bigint generated by default as identity,
        "expires_at" timestamp(6),
        "revoked" boolean default false,
        "token" varchar(255),
        "user" bigint,
        primary key ("id")
    );

    create table "public"."trade" (
        "id" bigint generated by default as identity,
        "buy_price" numeric(32,10),
        "buy_timestamp" timestamp(6),
        "manual" boolean,
        "margin" numeric(32,10),
        "max_price" numeric(32,10),
        "min_price" numeric(32,10),
        "open" boolean,
        "qty" numeric(32,10),
        "sell_price" numeric(32,10),
        "sell_timestamp" timestamp(6),
        "stop_loss" boolean,
        "ticker" bigint,
        primary key ("id")
    );

    create table "public"."transaction" (
        "id" bigint generated by default as identity,
        "costs" numeric(32,10),
        "occurred" timestamp(6),
        "price" numeric(32,10),
        "qty" numeric(32,10),
        "total" numeric(32,10),
        "ticker" bigint,
        primary key ("id")
    );

    create table "public"."trend" (
        "id" bigint generated by default as identity,
        "ended" timestamp(6),
        "occurred" timestamp(6),
        "indicator" bigint,
        "type" bigint,
        "user" bigint,
        primary key ("id")
    );

    create table "public"."trend_type" (
        "id" bigint generated by default as identity,
        "code" varchar(255),
        primary key ("id")
    );

    create table "public"."user" (
        "id" bigint generated by default as identity,
        "email" varchar(100) not null unique,
        "password" varchar(255) not null,
        primary key ("id")
    );

    create table "public"."settings" (
        "id" bigint generated by default as identity,
        "code" varchar(100) not null unique,
        "value" varchar(255),
        primary key ("id")
    );

    alter table if exists "public"."asset" 
       add constraint "FK2esmj9b8xp5m0luj04vqmqnye" 
       foreign key ("provider") 
       references "public"."provider";

    alter table if exists "public"."asset" 
       add constraint "FKqsnlcqeme71ti5a7e52dosbbm" 
       foreign key ("ticker") 
       references "public"."ticker";

    alter table if exists "public"."candle" 
       add constraint "FK1jgesffblu0dj7audugixiibe" 
       foreign key ("interval") 
       references "public"."interval";

    alter table if exists "public"."candle" 
       add constraint "FKmc7ur0cpx502d2jujxeo7u0w8" 
       foreign key ("ticker") 
       references "public"."ticker";

    alter table if exists "public"."indicator_data" 
       add constraint "FK8qwu7rdvxjytigjcc92rteh5q" 
       foreign key ("indicator") 
       references "public"."indicator";

    alter table if exists "public"."indicator_data" 
       add constraint "FK2kjrpdnvl6qrl5fq00vict6ya" 
       foreign key ("ticker") 
       references "public"."ticker";

    alter table if exists "public"."notification" 
       add constraint "FKy886a4pykgv0ljy7hu944p7m" 
       foreign key ("type") 
       references "public"."notification_type";

    alter table if exists "public"."notification" 
       add constraint "FKp4b5oxxsjiap2xovb9mmd3mu3" 
       foreign key ("user") 
       references "public"."user";

    alter table if exists "public"."token" 
       add constraint "FKegc9g3q3r385xvune5p762u8x" 
       foreign key ("user") 
       references "public"."user";

    alter table if exists "public"."trade" 
       add constraint "FKonfyrlx226ei9gya6i7x6496o" 
       foreign key ("ticker") 
       references "public"."ticker";

    alter table if exists "public"."transaction" 
       add constraint "FKa0jb8kir62pu6xvw1hq7qid0n" 
       foreign key ("ticker") 
       references "public"."ticker";

    alter table if exists "public"."trend" 
       add constraint "FKa3yvpue46ngbaasl4hs5x6ef9" 
       foreign key ("indicator") 
       references "public"."indicator";

    alter table if exists "public"."trend" 
       add constraint "FKgl7ggc9wn31nfav9k4ce2fihu" 
       foreign key ("type") 
       references "public"."trend_type";

    alter table if exists "public"."trend" 
       add constraint "FKlb79idtfffis6070t08ocv3j8" 
       foreign key ("user") 
       references "public"."ticker";
